--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commander": "^11.0.0",
     "destr": "^2.0.1",
     "enquirer": "^2.4.1",
-    "ofetch": "^1.3.3"
+    "ofetch": "^1.3.3",
+    "pino": "^8.15.1"
   }
 }
