--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
+    "@types/prompts": "^2.4.5",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "eslint": "^8.49.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
@@ -25,6 +26,7 @@
     "commander": "^11.0.0",
     "destr": "^2.0.1",
     "ofetch": "^1.3.3",
-    "pino": "^8.15.1"
+    "pino": "^8.15.1",
+    "prompts": "^2.4.2"
   }
 }
