--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "destr": "^2.0.1",
     "ofetch": "^1.3.3",
     "pino": "^8.15.1",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "table": "^6.8.1"
   }
 }
